[package]
name = "warp_router"
version = "1.0.0"
authors = ["Ian Welker <ianwelker@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
warp = "0.3.1"
uuid = { version = "0.8.2", features = ["v4"] }
argonautica = "0.2.0"
serde_derive = "1.0.125"
serde = "1.0.125"
futures-util = "0.3.14"
futures = "0.3.1"
futures-locks = "0.6"
clap = "2.33.3"
lazy_static = "1.4.0"
