[package]
name = "warp_router"
version = "1.0.0"
authors = ["Ian Welker <iandwelker@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3.1", features = ["tls", "websocket"], default-features = false }
uuid = { version = "0.8.2", features = ["v4"] }
rust-argon2 = "0.8.3"
serde = { version = "1.0.130", features = ["derive"] }
futures-util = "0.3.17"
futures-locks = "0.6"
clap = "2.33.3"
lazy_static = "1.4.0"
chrono = { version = "0.4.19", features = ["clock", "std"], default-features = false }
thiserror = "1.0.30"
serde_json = "1.0.68"
sysinfo = "0.20.4"

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
